--- a/src/scss/components/_fonts.scss
+++ b/src/scss/components/_fonts.scss
@@ -1,14 +1,42 @@
 @font-face {
-	font-family: "Neue Machina";
+	font-family: "MPLUS1";
 	font-display: swap;
-	src: url("../fonts/NeueMachina-Regular.woff2") format("woff2");
+	src: url("../fonts/MPLUS1-Regular.woff2") format("woff2");
 	font-weight: 400;
 	font-style: normal;
 }
 @font-face {
-	font-family: "Neue Machina";
+	font-family: "MPLUS1";
 	font-display: swap;
-	src: url("../fonts/NeueMachina-Ultrabold.woff2") format("woff2");
-	font-weight: 900;
+	src: url("../fonts/MPLUS1-Medium.woff2") format("woff2");
+	font-weight: 500;
+	font-style: normal;
+}
+@font-face {
+	font-family: "MPLUS1";
+	font-display: swap;
+	src: url("../fonts/MPLUS1-SemiBold.woff2") format("woff2");
+	font-weight: 600;
+	font-style: normal;
+}
+@font-face {
+	font-family: "MPLUS1";
+	font-display: swap;
+	src: url("../fonts/MPLUS1-Bold.woff2") format("woff2");
+	font-weight: 700;
+	font-style: normal;
+}
+@font-face {
+	font-family: "Poppins";
+	font-display: swap;
+	src: url("../fonts/Poppins-Regular.woff2") format("woff2");
+	font-weight: 400;
+	font-style: normal;
+}
+@font-face {
+	font-family: "Poppins";
+	font-display: swap;
+	src: url("../fonts/Poppins-Bold.woff2") format("woff2");
+	font-weight: 700;
 	font-style: normal;
 }
