--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,105 +1,105 @@
-.modals {
-	&__overlay {
-		position: fixed;
-		inset: 0;
-		z-index: 100;
-		background-color: rgba(0, 0, 0, 0.7);
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		height: 100vh;
-		width: 100%;
-		opacity: 0;
-		visibility: hidden;
-		transition: all 0.3s ease-in-out;
-		cursor: pointer;
-	}
-	&__item {
-		position: relative;
-		display: none;
-		background-color: var(--bg-1);
-		flex-direction: column;
-		row-gap: 40px;
-		border-radius: 5px;
-		padding: 40px;
-	}
-	&__title {
-		font-size: 32px;
-		font-weight: 400;
-		@include title;
-	}
-	&__link {
-		position: relative;
-		@include hover;
-		@include link;
-		&::before {
-			bottom: -3px;
-			width: 100%;
-		}
-	}
-	&__overlay--visible {
-		opacity: 1;
-		visibility: visible;
-		transition: all 0.3s ease-in-out;
-	}
-	&__item--visible {
-		display: flex;
-		cursor: default;
-	}
-}
-.form {
-	display: flex;
-	flex-direction: column;
-	row-gap: 20px;
-	// .form__input
-	&__input {
-		padding: 14px 16px;
-		border: 1px solid var(--black);
-		border-radius: 0;
-		@include input;
-	}
-	// .form__btn
-	&__btn {
-		padding: 14px 16px;
-		background-color: var(--white);
-		border: 1px solid var(--black);
-		transition: all var(--transition);
-		@include button;
-		&:hover {
-			@media (any-hover) {
-				background-color: var(--black);
-				color: var(--white);
-			}
-		}
-	}
-}
+// .modals {
+// 	&__overlay {
+// 		position: fixed;
+// 		inset: 0;
+// 		z-index: 100;
+// 		background-color: rgba(0, 0, 0, 0.7);
+// 		display: flex;
+// 		align-items: center;
+// 		justify-content: center;
+// 		height: 100vh;
+// 		width: 100%;
+// 		opacity: 0;
+// 		visibility: hidden;
+// 		transition: all 0.3s ease-in-out;
+// 		cursor: pointer;
+// 	}
+// 	&__item {
+// 		position: relative;
+// 		display: none;
+// 		background-color: var(--bg-1);
+// 		flex-direction: column;
+// 		row-gap: 40px;
+// 		border-radius: 5px;
+// 		padding: 40px;
+// 	}
+// 	&__title {
+// 		font-size: 32px;
+// 		font-weight: 400;
+// 		@include title;
+// 	}
+// 	&__link {
+// 		position: relative;
+// 		@include hover;
+// 		@include link;
+// 		&::before {
+// 			bottom: -3px;
+// 			width: 100%;
+// 		}
+// 	}
+// 	&__overlay--visible {
+// 		opacity: 1;
+// 		visibility: visible;
+// 		transition: all 0.3s ease-in-out;
+// 	}
+// 	&__item--visible {
+// 		display: flex;
+// 		cursor: default;
+// 	}
+// }
+// .form {
+// 	display: flex;
+// 	flex-direction: column;
+// 	row-gap: 20px;
+// 	// .form__input
+// 	&__input {
+// 		padding: 14px 16px;
+// 		border: 1px solid var(--black);
+// 		border-radius: 0;
+// 		@include input;
+// 	}
+// 	// .form__btn
+// 	&__btn {
+// 		padding: 14px 16px;
+// 		background-color: var(--white);
+// 		border: 1px solid var(--black);
+// 		transition: all var(--transition);
+// 		@include button;
+// 		&:hover {
+// 			@media (any-hover) {
+// 				background-color: var(--black);
+// 				color: var(--white);
+// 			}
+// 		}
+// 	}
+// }
 
-.modals-btn {
-	position: absolute;
-	top: 16px;
-	right: 16px;
-	width: 30px;
-	height: 20px;
-	padding: 12px;
-	border: none;
-	background-color: transparent;
-	@include button;
-	&::before,
-	&::after {
-		content: "";
-		position: absolute;
-		right: 0;
-		display: block;
-		width: 100%;
-		height: 2px;
-		background-color: var(--black);
-	}
-	&::before {
-		top: calc(50% - 1px);
-		transform: rotate(-45deg);
-	}
-	&::after {
-		bottom: calc(50% - 1px);
-		transform: rotate(45deg);
-	}
-}
+// .modals-btn {
+// 	position: absolute;
+// 	top: 16px;
+// 	right: 16px;
+// 	width: 30px;
+// 	height: 20px;
+// 	padding: 12px;
+// 	border: none;
+// 	background-color: transparent;
+// 	@include button;
+// 	&::before,
+// 	&::after {
+// 		content: "";
+// 		position: absolute;
+// 		right: 0;
+// 		display: block;
+// 		width: 100%;
+// 		height: 2px;
+// 		background-color: var(--black);
+// 	}
+// 	&::before {
+// 		top: calc(50% - 1px);
+// 		transform: rotate(-45deg);
+// 	}
+// 	&::after {
+// 		bottom: calc(50% - 1px);
+// 		transform: rotate(45deg);
+// 	}
+// }
