--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -1,12 +1,15 @@
 .accordion {
 	position: relative;
 	padding-right: 30px;
+
 	&:not(:first-child) {
 		border-top: 1px solid var(--black);
 	}
+
 	&:not(:last-child) {
 		border-bottom: 1px solid var(--black);
 	}
+
 	&::before,
 	&::after {
 		content: "";
@@ -18,6 +21,7 @@
 		right: 6px;
 		transition: transform var(--transition);
 	}
+
 	// .accordion__btn
 	&__btn {
 		color: inherit;
@@ -31,6 +35,7 @@
 		text-align: left;
 		cursor: pointer;
 	}
+
 	// .accordion__content
 	&__content {
 		max-height: 0;
@@ -39,17 +44,20 @@
 		padding-bottom: 0;
 		will-change: max-height;
 		transition: all var(--transition);
-		.accordion--active & {
+
+		.accordion-active & {
 			opacity: 1;
 			padding-bottom: 20px;
 		}
 	}
+
 	// .accordion__text
 	&__text {
 		@include p;
 	}
 }
-.accordion--active {
+
+.accordion-active {
 	&::after {
 		transform: rotate(90deg);
 	}
