--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,86 +1,97 @@
 .header {
 	position: fixed;
-	top: 0;
 	left: 0;
-	width: 100%;
+	top: 0;
 	z-index: 100;
+	width: 100%;
 	transition: background-color var(--transition);
-	&.header--scrolling {
+
+	&.header-scrolling {
 		background-color: var(--bg-1);
 	}
+
 	@include st {
 		&::before {
 			content: "";
 			position: absolute;
-			inset: 0;
 			z-index: 200;
 			background-color: var(--bg-1);
 			transform: translate(100%);
 			transition: transform var(--transition);
+			inset: 0;
 		}
+
 		.menu-active &::before {
 			transform: translate(0);
 		}
 	}
+
 	// .header__container
 	&__container {
-		@include container;
-		--gap: 20px;
-		min-height: 110px;
 		display: flex;
 		align-items: center;
-		column-gap: var(--gap);
+		justify-content: space-between;
+		min-height: 110px;
 		transition: min-height var(--transition);
-		.header--scrolling & {
+
+		@include container;
+
+		.header-scrolling & {
 			min-height: 60px;
 		}
+
 		@include m {
 			min-height: 90px;
 		}
-		@include st {
-			justify-content: space-between;
-		}
 	}
+
 	// .header__logo
 	&__logo {
 		position: relative;
 		z-index: 200;
 	}
+
 	// .header__img-logo
 	&__img-logo {
 		@include img;
 	}
 }
+
 // .header__menu
 .menu {
 	flex-grow: 1;
+
 	@include st {
-		overflow-y: auto;
 		position: fixed;
-		inset: 0;
+		overflow-y: auto;
 		padding: 150px 0 30px;
+		background-color: var(--bg-1);
 		transform: translateX(100%);
 		transition: transform 0.4s linear;
-		background-color: var(--bg-1);
+		inset: 0;
+
 		&.menu-active {
 			transform: translateX(0);
 		}
 	}
+
 	// .menu__list
 	&__list {
-		@include list;
 		display: flex;
-		align-items: center;
 		column-gap: var(--gap);
+		align-items: center;
+
+		@include list;
+
 		@include st {
-			flex-wrap: nowrap;
-			justify-content: flex-start;
+			flex-flow: column nowrap;
 			align-items: center;
-			flex-direction: column;
-			row-gap: var(--gap);
+			justify-content: flex-start;
 			margin-bottom: 30px;
+			row-gap: var(--gap);
 		}
 	}
+
 	// .menu__link
 	&__link {
 		position: relative;
@@ -88,8 +99,10 @@
 		padding: 17px 20px;
 		line-height: 1;
 		white-space: nowrap;
+
 		@include link;
 		@include hover;
+
 		&.menu-active {
 			&::before {
 				content: "";
@@ -116,28 +129,35 @@
 	display: flex;
 	align-items: center;
 	column-gap: var(--gap);
+
 	&--menu {
 		position: relative;
 		z-index: 200;
 		display: none;
+
 		@include sm {
 			display: flex;
 			justify-content: center;
 		}
 	}
+
 	&__button {
-		@include button;
 		min-height: 52px;
 		padding-inline: 20px;
 		border: none;
 		transition:
 			background-color var(--transition),
 			color var(--transition);
+
+		@include button;
+
 		@include sm {
 			display: none;
 		}
+
 		&--white {
 			background-color: var(--white);
+
 			&:hover {
 				@media (any-hover) {
 					background-color: var(--black);
@@ -145,9 +165,11 @@
 				}
 			}
 		}
+
 		&--black {
 			background-color: var(--black);
 			color: var(--white);
+
 			&:hover {
 				@media (any-hover) {
 					background-color: var(--white);
@@ -155,6 +177,7 @@
 				}
 			}
 		}
+
 		&--menu {
 			@include sm {
 				display: block;
@@ -166,6 +189,7 @@
 
 .burger-btn {
 	display: none;
+
 	@include st {
 		position: relative;
 		z-index: 200;
@@ -174,11 +198,13 @@
 		height: 20px;
 		background-color: transparent;
 		border: 0;
+
 		&:hover {
 			@media (any-hover) {
 				cursor: pointer;
 			}
 		}
+
 		span,
 		&::before,
 		&::after {
@@ -190,24 +216,30 @@
 			background-color: var(--black);
 			transition: all 0.3s ease 0s;
 		}
+
 		&::before {
 			top: 0;
 		}
+
 		&::after {
 			bottom: 0;
 		}
+
 		span {
 			top: calc(50% - 1px);
 		}
 	}
+
 	&.menu-active {
 		span {
 			width: 0;
 		}
+
 		&::before {
 			top: calc(50% - 1px);
 			transform: rotate(-45deg);
 		}
+
 		&::after {
 			bottom: calc(50% - 1px);
 			transform: rotate(45deg);
