--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,10 @@
-@import "./components/normalize.scss";
-@import "./components/fonts.scss";
-@import "./components/mixin.scss";
-@import "./components/settings.scss";
-@import "./components/function.scss";
-@import "./components/header.scss";
-@import "./components/page.scss";
-@import "./components/footer.scss";
-@import "./components/accordion.scss";
-@import "./components/modal.scss";
+@import "./components/normalize";
+@import "./components/fonts";
+@import "./components/mixin";
+@import "./components/settings";
+@import "./components/function";
+@import "./components/header";
+@import "./components/page";
+@import "./components/footer";
+@import "./components/accordion";
+@import "./components/modal";
