--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,24 +1,24 @@
 .header {
 	position: fixed;
-	left: 0;
 	top: 0;
+	left: 0;
 	z-index: 100;
 	width: 100%;
 	transition: background-color var(--transition);
 
 	&.header-scrolling {
-		background-color: var(--bg-1);
+		background-color: var(--bg);
 	}
 
-	@include st {
+	@include t {
 		&::before {
-			content: "";
 			position: absolute;
 			z-index: 200;
-			background-color: var(--bg-1);
+			background-color: var(--bg);
 			transform: translate(100%);
 			transition: transform var(--transition);
 			inset: 0;
+			content: "";
 		}
 
 		.menu-active &::before {
@@ -49,140 +49,124 @@
 	&__logo {
 		position: relative;
 		z-index: 200;
+		display: flex;
+		align-items: center;
+		column-gap: 12px;
 	}
 
 	// .header__img-logo
 	&__img-logo {
-		@include img;
-	}
-}
-
-// .header__menu
-.menu {
-	flex-grow: 1;
-
-	@include st {
-		position: fixed;
-		overflow-y: auto;
-		padding: 150px 0 30px;
-		background-color: var(--bg-1);
-		transform: translateX(100%);
-		transition: transform 0.4s linear;
-		inset: 0;
-
-		&.menu-active {
-			transform: translateX(0);
-		}
+		@include picture;
 	}
 
-	// .menu__list
-	&__list {
+	// .header__span-logo
+	&__span-logo {
+		color: var(--white);
+		font-weight: 700;
+		font-size: 20px;
+		font-family: var(--font-family);
+		line-height: 1.2;
+		letter-spacing: -0.03em;
+	}
+
+	// .header__active
+	&__active {
 		display: flex;
-		column-gap: var(--gap);
 		align-items: center;
-
-		@include list;
-
-		@include st {
-			flex-flow: column nowrap;
-			align-items: center;
-			justify-content: flex-start;
-			margin-bottom: 30px;
-			row-gap: var(--gap);
-		}
+		column-gap: 32px;
 	}
 
-	// .menu__link
-	&__link {
-		position: relative;
-		display: inline-block;
-		padding: 17px 20px;
-		line-height: 1;
-		white-space: nowrap;
-
-		@include link;
-		@include hover;
-
-		&.menu-active {
-			&::before {
-				content: "";
-				position: absolute;
-				bottom: 10px;
-				left: 50%;
-				width: calc(100% - 40px);
-				height: 2px;
-				background-color: var(--black);
-				transform: translateX(-50%) scale(1);
-				transition: transform var(--transition);
-			}
-		}
-
-		@include st {
-			font-size: 24px;
-		}
-	}
-}
-
-.button-block {
-	position: relative;
-	z-index: 200;
-	display: flex;
-	align-items: center;
-	column-gap: var(--gap);
-
-	&--menu {
-		position: relative;
-		z-index: 200;
-		display: none;
-
-		@include sm {
-			display: flex;
-			justify-content: center;
-		}
-	}
-
+	// .header__button
 	&__button {
-		min-height: 52px;
-		padding-inline: 20px;
-		border: none;
+		min-height: 48px;
+		color: var(--brand-color);
+		font-weight: 700;
+		font-size: inherit;
+		font-family: var(--font-family);
+		background-color: transparent;
+		border: 2px solid var(--brand-color);
+		border-radius: 64px;
+		padding-inline: 32px;
+		cursor: pointer;
 		transition:
 			background-color var(--transition),
 			color var(--transition);
 
-		@include button;
+		&:hover {
+			@media (any-hover) {
+				color: var(--white);
+				background-color: var(--brand-color);
+			}
+		}
 
 		@include sm {
 			display: none;
 		}
 
-		&--white {
-			background-color: var(--white);
-
-			&:hover {
-				@media (any-hover) {
-					background-color: var(--black);
-					color: var(--white);
-				}
-			}
-		}
-
-		&--black {
-			background-color: var(--black);
-			color: var(--white);
-
-			&:hover {
-				@media (any-hover) {
-					background-color: var(--white);
-					color: var(--block);
-				}
-			}
-		}
-
 		&--menu {
-			@include sm {
-				display: block;
-				font-size: 24px;
+			display: block;
+
+			@media (width >= 574.98px) {
+				display: none;
 			}
+		}
+	}
+}
+
+// .header__menu
+.menu {
+	@include t {
+		position: fixed;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		padding: 150px 0 30px;
+		overflow-y: auto;
+		background-color: var(--bg);
+		transform: translateX(100%);
+		transition: transform var(--transition);
+		inset: 0;
+	}
+
+	&.menu-active {
+		transform: translateX(0);
+	}
+
+	// .menu__list
+	&__list {
+		display: flex;
+		align-items: center;
+		column-gap: 32px;
+
+		@include list;
+
+		@include t {
+			flex-flow: column nowrap;
+			align-items: center;
+			justify-content: flex-start;
+			margin-bottom: 30px;
+			row-gap: 32px;
+		}
+	}
+
+	// .menu__link
+	&__link {
+		@include link;
+
+		position: relative;
+		display: inline-block;
+		color: var(--white);
+		font-weight: 500;
+		font-family: var(--font-family);
+		padding-block: 12px;
+		line-height: 1;
+		white-space: nowrap;
+		text-transform: capitalize;
+
+		@include hover;
+
+		@include t {
+			font-size: 24px;
 		}
 	}
 }
@@ -190,7 +174,7 @@
 .burger-btn {
 	display: none;
 
-	@include st {
+	@include t {
 		position: relative;
 		z-index: 200;
 		display: block;
@@ -208,13 +192,13 @@
 		span,
 		&::before,
 		&::after {
-			content: "";
 			position: absolute;
 			right: 0;
 			width: 100%;
 			height: 2px;
-			background-color: var(--black);
+			background-color: var(--brand-color);
 			transition: all 0.3s ease 0s;
+			content: "";
 		}
 
 		&::before {
