--- a/src/scss/components/_mixin.scss
+++ b/src/scss/components/_mixin.scss
@@ -2,43 +2,43 @@ $canvas: 1440px;
 $container: 1240px;
 
 @mixin xsm {
-	@media (max-width <= 424.98px) {
+	@media (width <= 424.98px) {
 		@content;
 	}
 }
 
 @mixin sm {
-	@media (max-width <= 574.98px) {
+	@media (width <= 574.98px) {
 		@content;
 	}
 }
 
 @mixin m {
-	@media (max-width <= 767.98px) {
+	@media (width <= 767.98px) {
 		@content;
 	}
 }
 
 @mixin st {
-	@media (max-width <= 959.98px) {
+	@media (width <= 959.98px) {
 		@content;
 	}
 }
 
 @mixin t {
-	@media (max-width <= 1023.98px) {
+	@media (width <= 1023.98px) {
 		@content;
 	}
 }
 
 @mixin bt {
-	@media (max-width <= 1439.98px) {
+	@media (width <= 1199.98px) {
 		@content;
 	}
 }
 
 @mixin d {
-	@media (max-width: $container) {
+	@media (width: $container) {
 		@content;
 	}
 }
@@ -61,23 +61,23 @@ $container: 1240px;
 */
 
 @mixin container {
-	margin: 0 auto;
 	max-width: calc($container + var(--padding-inline) * 2);
+	margin: 0 auto;
 	padding-inline: var(--padding-inline);
 	@content;
 }
 
 @mixin hover {
 	&::before {
-		content: "";
 		position: absolute;
+		bottom: 0;
 		left: 50%;
-		bottom: 10px;
-		width: calc(100% - 40px);
+		width: 100%;
 		height: 2px;
-		background-color: var(--black);
+		background-color: var(--brand-color);
 		transform: translateX(-50%) scale(0);
 		transition: transform var(--transition);
+		content: "";
 	}
 
 	&:hover::before {
