--- a/src/scss/components/_normalize.scss
+++ b/src/scss/components/_normalize.scss
@@ -1,6 +1,6 @@
 html {
-	height: 100%;
 	box-sizing: border-box;
+	height: 100%;
 	scroll-behavior: smooth;
 }
 
@@ -10,61 +10,50 @@ html {
 	box-sizing: inherit;
 }
 
-@mixin img {
-	display: block;
-	max-width: 100%;
-	@content;
-}
-
-@mixin svg {
+@mixin picture {
 	display: block;
 	max-width: 100%;
 	@content;
 }
 
 @mixin list {
-	list-style: none;
 	padding-left: 0;
+	list-style: none;
 	margin-block: 0;
 	@content;
 }
 
 @mixin button {
-	font-family: inherit;
-	font-size: inherit;
 	color: inherit;
+	font-size: inherit;
+	font-family: inherit;
 	@content;
 }
 
-@mixin title {
-	margin-block: 0;
-	@content;
-}
-
-@mixin p {
+@mixin margin-block {
 	margin-block: 0;
 	@content;
 }
 
 @mixin link {
-	text-decoration: none;
 	color: inherit;
+	text-decoration: none;
 	@content;
 }
 
 @mixin input {
-	font-family: inherit;
-	font-size: inherit;
 	color: inherit;
+	font-size: inherit;
+	font-family: inherit;
 	@content;
 }
 
 @media (prefers-reduced-motion: reduce) {
 	* {
-		transition-duration: 10ms;
-		animation-duration: 10ms;
-		animation-iteration-count: 1;
-		scroll-behavior: auto;
+		transition-duration: 0.01ms !important;
+		animation-duration: 0.01ms !important;
+		animation-iteration-count: 1 !important;
+		scroll-behavior: auto !important;
 	}
 }
 
