--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -20,10 +20,10 @@
 			inset: 0;
 			content: "";
 		}
+	}
 
-		.menu-active &::before {
-			transform: translate(0);
-		}
+	.menu-active.header::before {
+		transform: translate(0);
 	}
 
 	// .header__container
