--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -1,1 +1,249 @@
-/* stylelint-disable-next-line no-empty-source */
+.main {
+	--padding-block: 64px;
+
+	padding-top: 208px;
+
+	&__banner {
+		padding-bottom: var(--padding-block);
+	}
+}
+
+.button {
+	position: relative;
+	min-height: 56px;
+	padding: 16px 71px 16px 32px;
+	color: var(--white);
+	font-weight: 500;
+	font-size: inherit;
+	font-family: inherit;
+	line-height: 1;
+	background-color: var(--brand-color);
+	border: none;
+	border-radius: 64px;
+	cursor: pointer;
+
+	&::before {
+		position: absolute;
+		top: 50%;
+		right: 32px;
+		width: 25px;
+		height: 19px;
+		background-image: url("../img/icon/arrow.svg");
+		background-repeat: no-repeat;
+		background-position: 0;
+		background-size: 25px 19px;
+		transform: translateY(-50%);
+		transition:
+			right var(--transition),
+			background-color var(--transition);
+		content: "";
+	}
+
+	&:hover::before {
+		@media (any-hover) {
+			right: 14px;
+		}
+	}
+}
+
+.banner {
+	// .banner__container
+	&__container {
+		@include container;
+
+		position: relative;
+		display: flex;
+		justify-content: space-between;
+		column-gap: 32px;
+
+		&::before {
+			position: absolute;
+			top: 61px;
+			left: 60px;
+			width: 359px;
+			height: 110px;
+			background: url("../img/banner/banner-decor.svg") 0 0 no-repeat;
+			content: "";
+		}
+	}
+
+	// .banner__text-block
+	&__text-block {
+		display: flex;
+		flex-basis: 45%;
+		flex-direction: column;
+		align-items: flex-start;
+		row-gap: 32px;
+	}
+
+	// .banner__title
+	&__title {
+		@include margin-block;
+
+		color: var(--white);
+		font-weight: 700;
+		font-size: 56px;
+		line-height: 1.14;
+		letter-spacing: -0.025em;
+	}
+
+	// .banner__text
+	&__text {
+		@include margin-block;
+
+		max-width: 498px;
+	}
+
+	// .banner__button
+	&__button {
+		// block
+	}
+
+	// .banner__users-block
+	&__users-block {
+		// block
+	}
+
+	// .banner__card-block
+	&__card-block {
+		// block
+	}
+}
+
+.users-banner {
+	display: grid;
+	grid-template-columns: auto 1fr;
+	align-items: center;
+	max-width: 313px;
+	column-gap: 16px;
+
+	// .users-banner__block-img
+	&__block-img {
+		display: flex;
+		grid-row: 1/3;
+		grid-column: 1/2;
+	}
+
+	// .users-banner__img
+	&__img {
+		width: 48px;
+		aspect-ratio: 1;
+
+		&:not(:first-child) {
+			margin-left: -13px;
+		}
+	}
+
+	// .users-banner__number
+	&__number {
+		grid-row: 1/2;
+		grid-column: 2/3;
+		color: var(--white);
+		font-weight: 700;
+	}
+
+	// .users-banner__text
+	&__text {
+		grid-row: 2/3;
+		grid-column: 2/3;
+		font-size: 12px;
+	}
+}
+
+.card-banner {
+	position: relative;
+	z-index: 10;
+	flex-basis: 551px;
+	flex-shrink: 0;
+	align-self: flex-end;
+	min-height: 348px;
+	margin-top: 64px;
+	margin-right: 32px;
+	padding: 121px 36px 36px 56px;
+	border-radius: 32px;
+	box-shadow: 0 4px 20px 0 #00000040;
+	transform: rotate(15deg);
+
+	&::before {
+		position: absolute;
+		z-index: -1;
+		inset: 0;
+		background: linear-gradient(136deg, #ffffff5e 0%, #ffffff5e 100%);
+		border-radius: 32px;
+		content: "";
+	}
+
+	&::after {
+		position: absolute;
+		inset: 0;
+		z-index: -2;
+		background:
+			url("../img/banner/card/master-card.svg") 56px 36px no-repeat,
+			url("../img/banner/card/nfs.svg") calc(100% - 36px) 36px no-repeat,
+			url("../img/banner/card/chip.svg") calc(100% - 36px) calc(100% - 36px) no-repeat;
+		backdrop-filter: blur(10px);
+		content: "";
+	}
+
+	// .card-banner__header
+	&__decor {
+		position: absolute;
+		top: -86px;
+		left: 49%;
+		z-index: -3;
+		width: 489px;
+		aspect-ratio: 1;
+		background-color: var(--brand-color);
+		border-radius: 50%;
+	}
+
+	// .card-banner__text-number
+	&__text-number {
+		display: block;
+		margin-bottom: 14px;
+		font-weight: 600;
+		font-size: 14px;
+	}
+
+	// .card-banner__block-number
+	&__block-number {
+		display: flex;
+		margin-bottom: 32px;
+		column-gap: 32px;
+	}
+
+	// .card-banner__number
+	&__number {
+		color: var(--white);
+		font-weight: 700;
+		font-size: 32px;
+	}
+
+	// .card-banner__block-text
+	&__block-text {
+		display: grid;
+		grid-template-columns: 2fr 1fr;
+		gap: 16px;
+		max-width: 232px;
+	}
+
+	// .card-banner__text
+	&__text {
+		font-weight: 600;
+		font-size: 14px;
+	}
+
+	// .card-banner__name
+	&__name {
+		color: var(--white);
+		font-weight: 500;
+		font-size: 12px;
+	}
+
+	// .card-banner__date
+	&__date {
+		color: var(--white);
+		font-weight: 600;
+		font-size: 12px;
+	}
+}
