--- a/src/scss/components/_settings.scss
+++ b/src/scss/components/_settings.scss
@@ -4,7 +4,6 @@
 	--brand-color: #2bb32a;
 	--bg: #151d16;
 	--font-family: "MPLUS1";
-	--second-family: "Poppins";
 	--padding-inline: 70px;
 	--transition: 0.3s;
 
@@ -30,7 +29,7 @@ html {
 	color: var(--text-color);
 	font-weight: 400;
 	font-size: 16px;
-	font-family: var(--second-family);
+	font-family: var(--font-family), sans-serif;
 	line-height: 1.5;
 	background-image: image-set(
 		url("../img/site_bg.jpg?as=avif") type("image/avif"),
