--- a/src/scss/components/_fonts.scss
+++ b/src/scss/components/_fonts.scss
@@ -29,3 +29,11 @@
 	src: url("../fonts/MPLUS1-Bold.woff2") format("woff2");
 	font-display: swap;
 }
+
+@font-face {
+	font-weight: 700;
+	font-family: "MPLUS1-code";
+	font-style: normal;
+	src: url("../fonts/MPLUS1Code-Bold.woff2") format("woff2");
+	font-display: swap;
+}
