--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -3,6 +3,10 @@
 
 	padding-top: 208px;
 
+	@include bt {
+		padding-top: clamp(100px, vwbt(208px), 208px);
+	}
+
 	&__banner {
 		padding-bottom: var(--padding-block);
 	}
@@ -56,6 +60,11 @@
 		justify-content: space-between;
 		column-gap: 32px;
 
+		@include bt {
+			flex-direction: column;
+			row-gap: 32px;
+		}
+
 		&::before {
 			position: absolute;
 			top: 61px;
@@ -64,6 +73,10 @@
 			height: 110px;
 			background: url("../img/banner/banner-decor.svg") 0 0 no-repeat;
 			content: "";
+
+			@include m {
+				display: none;
+			}
 		}
 	}
 
@@ -74,6 +87,10 @@
 		flex-direction: column;
 		align-items: flex-start;
 		row-gap: 32px;
+
+		@include bt {
+			flex-basis: auto;
+		}
 	}
 
 	// .banner__title
@@ -85,6 +102,19 @@
 		font-size: 56px;
 		line-height: 1.14;
 		letter-spacing: -0.025em;
+
+		@include bt {
+			max-width: 70vw;
+		}
+
+		@include t {
+			max-width: 80vw;
+			font-size: clamp(38px, vwt(56px), 56px);
+		}
+
+		@include m {
+			max-width: 100vw;
+		}
 	}
 
 	// .banner__text
@@ -99,14 +129,27 @@
 		// block
 	}
 
-	// .banner__users-block
-	&__users-block {
-		// block
-	}
+	// .banner__img-card
+	&__img-card {
+		position: relative;
+		display: none;
+		align-self: flex-end;
+		backdrop-filter: blur(75px);
 
-	// .banner__card-block
-	&__card-block {
-		// block
+		@media (width <= 767.98px) {
+			@include picture;
+
+			&::before {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 489px;
+				height: 489px;
+				background-color: var(--brand-color);
+				border-radius: 50%;
+				content: "";
+			}
+		}
 	}
 }
 
@@ -152,17 +195,33 @@
 
 .card-banner {
 	position: relative;
-	z-index: 10;
+	z-index: 1;
 	flex-basis: 551px;
 	flex-shrink: 0;
 	align-self: flex-end;
 	min-height: 348px;
-	margin-top: 64px;
 	margin-right: 32px;
 	padding: 121px 36px 36px 56px;
+	border: 2px solid var(--text-color);
 	border-radius: 32px;
 	box-shadow: 0 4px 20px 0 #00000040;
 	transform: rotate(15deg);
+
+	@include canvas {
+		margin-right: 0;
+		transform: rotate(0);
+	}
+
+	@include bt {
+		display: block;
+		flex-basis: auto;
+		width: 100%;
+		max-width: 551px;
+	}
+
+	@include m {
+		display: none;
+	}
 
 	&::before {
 		position: absolute;
@@ -181,6 +240,7 @@
 			url("../img/banner/card/master-card.svg") 56px 36px no-repeat,
 			url("../img/banner/card/nfs.svg") calc(100% - 36px) 36px no-repeat,
 			url("../img/banner/card/chip.svg") calc(100% - 36px) calc(100% - 36px) no-repeat;
+		border-radius: 32px;
 		backdrop-filter: blur(10px);
 		content: "";
 	}
@@ -209,6 +269,7 @@
 	&__block-number {
 		display: flex;
 		margin-bottom: 32px;
+		font-family: var(--font-family-code);
 		column-gap: 32px;
 	}
 
