--- a/src/scss/components/_function.scss
+++ b/src/scss/components/_function.scss
@@ -17,3 +17,7 @@
 @function vwm($n) {
 	@return calc($n / 767.98px * 100vw);
 }
+
+@function vwdecor($n) {
+	@return calc($n / 767.98px * -100vw);
+}
