--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -22,10 +22,6 @@
 		}
 	}
 
-	.menu-active.header::before {
-		transform: translate(0);
-	}
-
 	// .header__container
 	&__container {
 		@include container;
@@ -36,7 +32,7 @@
 		min-height: 110px;
 		transition: min-height var(--transition);
 
-		.header-scrolling & {
+		&.header-scrolling {
 			min-height: 60px;
 		}
 
@@ -112,6 +108,10 @@
 			}
 		}
 	}
+}
+
+.menu-active.header::before {
+	transform: translate(0);
 }
 
 // .header__menu
