--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -14,7 +14,9 @@
 
 	&__about,
 	&__slider,
-	&__offer {
+	&__offer,
+	&__design,
+	&__find {
 		padding-block: var(--padding-block);
 	}
 }
@@ -27,7 +29,6 @@
 	font-weight: 500;
 	font-size: inherit;
 	font-family: inherit;
-	line-height: 1;
 	background-color: var(--brand-color);
 	border: none;
 	border-radius: 64px;
@@ -67,6 +68,251 @@
 	color: var(--white);
 	font-weight: 700;
 	font-size: clamp(32px, vwt(40px), 40px);
+}
+
+.card {
+	position: relative;
+	z-index: 1;
+	flex-basis: 551px;
+	flex-shrink: 0;
+	align-self: flex-end;
+	min-height: 348px;
+	margin-right: 32px;
+	padding: 121px 36px 36px 56px;
+	border-radius: 32px;
+	box-shadow: 0 4px 20px 0 #00000040;
+	transform: rotate(15deg);
+
+	@include canvas {
+		margin-right: 0;
+		transform: rotate(0);
+	}
+
+	@include bt {
+		display: block;
+		flex-basis: auto;
+		width: 100%;
+		max-width: 551px;
+	}
+
+	@include m {
+		display: none;
+	}
+
+	&::before {
+		position: absolute;
+		z-index: -1;
+		inset: 0;
+		background: linear-gradient(136deg, #ffffff5e 0%, #ffffff5e 100%);
+		border: 2px solid var(--text-color);
+		border-radius: 32px;
+		content: "";
+	}
+
+	&::after {
+		position: absolute;
+		inset: 0;
+		z-index: -2;
+		border-radius: 32px;
+		backdrop-filter: blur(75px);
+		content: "";
+	}
+
+	&__decor {
+		position: absolute;
+		top: -86px;
+		left: 49%;
+		z-index: -3;
+		width: 489px;
+		aspect-ratio: 1;
+		background-color: var(--brand-color);
+		border-radius: 50%;
+	}
+
+	&__decor-master-card,
+	&__decor-nfs,
+	&__decor-chip {
+		@include picture;
+
+		position: absolute;
+		z-index: 2;
+		color: var(--white);
+
+		&--second {
+			color: #424242;
+		}
+
+		&--third {
+			color: #1a1e1c;
+		}
+	}
+
+	&__decor-master-card {
+		top: 36px;
+		left: 56px;
+	}
+
+	&__decor-nfs {
+		top: 36px;
+		right: 36px;
+	}
+
+	&__decor-chip {
+		right: 36px;
+		bottom: 36px;
+	}
+
+	// .card__text-number
+	&__text-number {
+		display: block;
+		margin-bottom: 14px;
+		font-weight: 600;
+		font-size: 14px;
+
+		&--first {
+			color: var(--white);
+		}
+
+		&--second {
+			color: #595959;
+		}
+	}
+
+	// .card__block-number
+	&__block-number {
+		display: flex;
+		margin-bottom: 32px;
+		font-family: var(--font-family-code);
+		column-gap: 32px;
+	}
+
+	// .card__number
+	&__number {
+		color: var(--white);
+		font-weight: 700;
+		font-size: 32px;
+
+		&--second {
+			color: #424242;
+		}
+
+		&--third {
+			color: #1a1e1c;
+		}
+	}
+
+	// .card__block-text
+	&__block-text {
+		display: grid;
+		grid-template-columns: 2fr 1fr;
+		gap: 16px;
+		max-width: 232px;
+	}
+
+	// .card__text
+	&__text {
+		font-weight: 600;
+		font-size: 14px;
+
+		&--first {
+			color: var(--white);
+		}
+
+		&--second {
+			color: #595959;
+		}
+	}
+
+	// .card__name
+	&__name {
+		color: var(--white);
+		font-weight: 500;
+		font-size: 12px;
+
+		&--second {
+			color: #424242;
+		}
+
+		&--third {
+			color: #1a1e1c;
+		}
+	}
+
+	// .card__date
+	&__date {
+		color: var(--white);
+		font-weight: 600;
+		font-size: 12px;
+
+		&--second {
+			color: #424242;
+		}
+
+		&--third {
+			color: #1a1e1c;
+		}
+	}
+
+	&--design-block,
+	&--find-block {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		margin-right: 0;
+		transform: rotate(0deg);
+		transform-origin: left top;
+		animation-duration: 1s;
+		animation-play-state: paused;
+		animation-timing-function: linear;
+		animation-direction: alternate;
+		animation-fill-mode: both;
+
+		@include canvas {
+			display: none;
+		}
+
+		&::before,
+		&::after {
+			display: none;
+		}
+	}
+
+	&--first,
+	&--first-find {
+		z-index: 3;
+		background-color: #ffffff1a;
+		backdrop-filter: blur(7px);
+		animation-name: lift-first;
+	}
+
+	&--second,
+	&--second-find {
+		z-index: 2;
+		background-color: var(--brand-color);
+		backdrop-filter: blur(7px);
+		animation-name: lift-second;
+	}
+
+	&--third {
+		z-index: 1;
+		background-color: var(--white);
+		animation-name: lift-third;
+	}
+
+	&--find-block {
+		transform-origin: left bottom;
+	}
+
+	&--first-find {
+		z-index: 2;
+		animation-name: lift-first-find;
+	}
+
+	&--second-find {
+		z-index: 1;
+		animation-name: lift-second-find;
+	}
 }
 
 .banner {
@@ -194,122 +440,6 @@
 	}
 }
 
-.card-banner {
-	position: relative;
-	z-index: 1;
-	flex-basis: 551px;
-	flex-shrink: 0;
-	align-self: flex-end;
-	min-height: 348px;
-	margin-right: 32px;
-	padding: 121px 36px 36px 56px;
-	border-radius: 32px;
-	box-shadow: 0 4px 20px 0 #00000040;
-	transform: rotate(15deg);
-
-	@include canvas {
-		margin-right: 0;
-		transform: rotate(0);
-	}
-
-	@include bt {
-		display: block;
-		flex-basis: auto;
-		width: 100%;
-		max-width: 551px;
-	}
-
-	@include m {
-		display: none;
-	}
-
-	&::before {
-		position: absolute;
-		z-index: -1;
-		inset: 0;
-		background: linear-gradient(136deg, #ffffff5e 0%, #ffffff5e 100%);
-		border: 2px solid var(--text-color);
-		border-radius: 32px;
-		content: "";
-	}
-
-	&::after {
-		position: absolute;
-		inset: 0;
-		z-index: -2;
-		background:
-			url("../img/banner/card/master-card.svg") 56px 36px no-repeat,
-			url("../img/banner/card/nfs.svg") calc(100% - 36px) 36px no-repeat,
-			url("../img/banner/card/chip.svg") calc(100% - 36px) calc(100% - 36px) no-repeat;
-		border-radius: 32px;
-		backdrop-filter: blur(10px);
-		content: "";
-	}
-
-	// .card-banner__header
-	&__decor {
-		position: absolute;
-		top: -86px;
-		left: 49%;
-		z-index: -3;
-		width: 489px;
-		aspect-ratio: 1;
-		background-color: var(--brand-color);
-		border-radius: 50%;
-	}
-
-	// .card-banner__text-number
-	&__text-number {
-		display: block;
-		margin-bottom: 14px;
-		font-weight: 600;
-		font-size: 14px;
-	}
-
-	// .card-banner__block-number
-	&__block-number {
-		display: flex;
-		margin-bottom: 32px;
-		font-family: var(--font-family-code);
-		column-gap: 32px;
-	}
-
-	// .card-banner__number
-	&__number {
-		color: var(--white);
-		font-weight: 700;
-		font-size: 32px;
-	}
-
-	// .card-banner__block-text
-	&__block-text {
-		display: grid;
-		grid-template-columns: 2fr 1fr;
-		gap: 16px;
-		max-width: 232px;
-	}
-
-	// .card-banner__text
-	&__text {
-		font-weight: 600;
-		font-size: 14px;
-	}
-
-	// .card-banner__name
-	&__name {
-		color: var(--white);
-		font-weight: 500;
-		font-size: 12px;
-	}
-
-	// .card-banner__date
-	&__date {
-		color: var(--white);
-		font-weight: 600;
-		font-size: 12px;
-	}
-}
-
 // ? banner end
 
 .about {
@@ -332,12 +462,9 @@
 		backdrop-filter: blur(16px);
 
 		@include sm {
-			max-width: 70%;
+			grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+			max-width: 100%;
 			margin: 0 auto;
-		}
-
-		@include xsm {
-			max-width: 90%;
 		}
 	}
 
@@ -389,15 +516,6 @@
 		min-height: 32px;
 		transform: translateX(110%);
 		animation: slider 30s linear infinite;
-
-		// animation-name: slider;
-		// animation-duration: 30s;
-		// animation-play-state: start;
-		// animation-timing-function: linear;
-		// animation-delay: 1s;
-		// animation-iteration-count: infinite;
-		// animation-direction: normal;
-		// animation-fill-mode: forwards;
 	}
 
 	// .slider__li
@@ -408,16 +526,6 @@
 	// .slider__img
 	&__img {
 		@include picture;
-	}
-
-	@keyframes slider {
-		from {
-			transform: translateX(110%);
-		}
-
-		to {
-			transform: translateX(-110%);
-		}
 	}
 }
 
@@ -451,11 +559,12 @@
 	&__li {
 		display: grid;
 		grid-template-columns: 64px 1fr;
-		gap: 24px;
+		column-gap: 24px;
 
 		@include sm {
 			grid-template-columns: 1fr;
 			justify-items: center;
+			row-gap: 16px;
 		}
 
 		&::before {
@@ -521,6 +630,214 @@
 		@include sm {
 			grid-row: 3/4;
 			grid-column: 1/2;
+			text-align: center;
 		}
+	}
+}
+
+.design {
+	// .design__container
+	&__container {
+		@include container;
+
+		display: flex;
+		justify-content: space-between;
+		column-gap: 32px;
+
+		@include m {
+			flex-direction: column;
+			row-gap: 32px;
+			align-items: center;
+		}
+	}
+
+	// .design__text-block
+	&__text-block {
+		display: flex;
+		flex-basis: 604px;
+		flex-direction: column;
+		row-gap: 24px;
+		align-items: flex-start;
+
+		@include m {
+			flex-basis: auto;
+		}
+	}
+
+	// .design__text
+	&__text {
+		@include margin-block;
+	}
+
+	// .design__card-block
+	&__block-card {
+		position: relative;
+		flex: 0 0 551px;
+		transform-style: preserve-3d;
+		perspective: 1000px;
+
+		/* stylelint-disable-next-line selector-class-pattern */
+		&:hover .card--design-block {
+			@media (any-hover) {
+				animation-play-state: running;
+			}
+		}
+
+		@include canvas {
+			flex: 0 1 auto;
+		}
+	}
+
+	// .design__img
+	&__img {
+		display: none;
+
+		@include canvas {
+			@include picture;
+		}
+	}
+}
+
+.find {
+	// .find__container
+	&__container {
+		@include container;
+
+		display: flex;
+		justify-content: space-between;
+		column-gap: 32px;
+
+		@include m {
+			flex-direction: column-reverse;
+			row-gap: 32px;
+			align-items: center;
+		}
+	}
+
+	// .find__card-block
+	&__block-card {
+		position: relative;
+		flex-basis: 455px;
+		transform-style: preserve-3d;
+		perspective: 1000px;
+
+		@include m {
+			flex-basis: auto;
+		}
+
+		/* stylelint-disable-next-line selector-class-pattern */
+		&:hover .card--find-block {
+			@media (any-hover) {
+				animation-play-state: running;
+			}
+		}
+	}
+
+	// .find__img
+	&__img {
+		display: none;
+
+		@include canvas {
+			@include picture;
+		}
+	}
+
+	// .find__text-block
+	&__text-block {
+		display: flex;
+		flex-basis: 604px;
+		flex-direction: column;
+		row-gap: 24px;
+		align-items: flex-start;
+		justify-content: center;
+
+		@include m {
+			flex-basis: auto;
+		}
+	}
+
+	// .find__text
+	&__text {
+		@include margin-block;
+	}
+
+	// .find__button
+	&__button {
+		padding-right: 32px;
+		text-decoration: none;
+		border: 2px solid transparent;
+		transition: all var(--transition);
+
+		&::before {
+			display: none;
+		}
+
+		&:hover {
+			@media (any-hover) {
+				background-color: var(--bg);
+				border: 2px solid var(--brand-color);
+			}
+		}
+	}
+}
+
+@keyframes slider {
+	from {
+		transform: translateX(110%);
+	}
+
+	to {
+		transform: translateX(-110%);
+	}
+}
+
+@keyframes lift-first {
+	from {
+		transform: translateY(0) translateX(0) scale(1) rotate(0) rotateY(0deg) rotateZ(0deg);
+	}
+
+	to {
+		transform: translateY(-70px) translateX(0) scale(0.7) rotateX(40deg) rotateY(0deg) rotateZ(0deg);
+	}
+}
+
+@keyframes lift-second {
+	from {
+		transform: translateY(0) translateX(0) scale(1) rotateX(0) rotateY(0deg) rotateZ(0deg);
+	}
+
+	to {
+		transform: translateY(0) translateX(70px) scale(0.7) rotateX(40deg) rotateY(0deg) rotateZ(0deg);
+	}
+}
+
+@keyframes lift-third {
+	from {
+		transform: translateY(0) translateX(0) scale(1) rotateX(0) rotateY(0deg) rotateZ(0deg);
+	}
+
+	to {
+		transform: translateY(70px) translateX(140px) scale(0.7) rotateX(40deg) rotateY(0deg) rotateZ(0deg);
+	}
+}
+
+@keyframes lift-first-find {
+	from {
+		transform: translateY(0) translateX(0) scale(1) rotateX(0) rotateY(0deg) rotateZ(0deg);
+	}
+
+	to {
+		transform: translateY(-150px) translateX(0px) scale(0.9) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+	}
+}
+
+@keyframes lift-second-find {
+	from {
+		transform: translateY(0) translateX(0) scale(1) rotateX(0) rotateY(0deg) rotateZ(0deg);
+	}
+
+	to {
+		transform: translateY(30px) translateX(-10px) translateZ(-40px) scale(1) rotateX(20deg) rotateY(30deg) rotateZ(0deg)
+			skewX(10deg);
 	}
 }
