--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -5,7 +5,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		width: 100%;
+		width: 100vw;
 		height: 100vh;
 		overflow: hidden;
 		background-color: #000000b3;
@@ -16,8 +16,8 @@
 
 		&--visible {
 			visibility: visible;
+			cursor: pointer;
 			opacity: 1;
-			transition: all 0.3s ease-in-out;
 		}
 	}
 
@@ -25,7 +25,7 @@
 		position: relative;
 		display: none;
 		flex-direction: column;
-		padding: 40px;
+		padding: 40px 24px;
 		background-color: var(--bg);
 		row-gap: 40px;
 		border: 2px solid var(--brand-color);
@@ -54,12 +54,12 @@
 		@include link;
 
 		position: relative;
+		align-self: center;
 
 		@include hover;
 
 		&::before {
-			bottom: -3px;
-			width: 100%;
+			bottom: -5px;
 		}
 	}
 }
@@ -83,17 +83,18 @@
 
 	// .form__btn
 	&__btn {
-		@include button;
-
-		padding: 14px 16px;
-		background-color: var(--white);
-		border: 1px solid var(--black);
+		padding-right: 32px;
+		border: 2px solid transparent;
 		transition: all var(--transition);
+
+		&::before {
+			display: none;
+		}
 
 		&:hover {
 			@media (any-hover) {
-				color: var(--white);
-				background-color: var(--black);
+				background-color: var(--bg);
+				border: 2px solid var(--brand-color);
 			}
 		}
 	}
