--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import "./components/mixin";
 @import "./components/settings";
 @import "./components/function";
+@import "./components/general";
 @import "./components/header";
 @import "./components/page";
 @import "./components/footer";
